--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -70,6 +70,9 @@ v0.41.3-dev
 + Bug [#4518]: VTOL Chin turret weight not being calculated
 + Data: Couple of Unit fixes and New Sprites.
 + Made Endo Steel and Endo Composite variable criticals, for super heavies
++ Bug [#4454] Final Fix for Infantry Costs.
++ Bug [MML#147] BA mechanical jump boosters take up no weight
++ Bug: Infantry Weights adjusted to take into account AntiMek Equipment.
 
 
 v0.41.2-dev (2015-02-12 15:20 UTC)
