--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -74,6 +74,8 @@ v0.41.3-dev
 + Bug [MML#147] BA mechanical jump boosters take up no weight
 + Bug: Infantry Weights adjusted to take into account AntiMek Equipment.
 + Bug [#4513]: NPE in 0.41.3 r11674 Infantry.isLocationProhibited caused by Vee
++ Bug [#4506]: Deploying minefields - trying to cancel the minefield deploys the
+    minefield with 0 density
 
 
 v0.41.2-dev (2015-02-12 15:20 UTC)
