--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -87,6 +87,7 @@ v0.41.3-dev
     Show Movement option
 + Bug: Sensor return icons displayed info it shouldn't (like facing, prone, etc)
 + Bug: Added missing default keybind for Toggle Isometric (it's now T)
++ Feature: Added ability to select default weapon sort order in client settings
 
 
 v0.41.2-dev (2015-02-12 15:20 UTC)
