--- a/trunk/megamek/i18n/megamek/client/messages.properties
+++ b/trunk/megamek/i18n/megamek/client/messages.properties
@@ -536,7 +536,7 @@ CommonSettingsDialog.clickEdgeScroll=By right-clicking near the edge of the map.
 CommonSettingsDialog.ctlScroll=By holding down CTRL and dragging.
 CommonSettingsDialog.defaultAutoejectDisabled=Disable automatic ejection by default for units added in the lobby.
 CommonSettingsDialog.defaultWeaponSortOrder=Default Weapon Sort Order:
-CommonSettingsDialog.defaultWeaponSortOrderTooltip=Sets the default weapon sort order, if a given chassis/model doesn't have a custom weapon sort order (which overrides the default).
+CommonSettingsDialog.defaultWeaponSortOrderTooltip=<html>Sets the default weapon sort order for chassis/models without a specified default.  <br>Changing this setting won't effect games already in progress.</html>
 CommonSettingsDialog.useAverageSkills=Use the current random skill settings when adding units in the lobby.
 CommonSettingsDialog.generateNames=Generate a random name for the pilots of new units.
 CommonSettingsDialog.getFocus=Get Focus when a new phase begins.
