--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -93,6 +93,7 @@ v0.41.3-dev
 + Data: New Sprites and some unit fixed.
 + Bug [#4490]: CASE doesn't work correctly for the tac ops taking damage rule.
 + Bug [#4520]: ProtoMechs and Equipment Modes
++ Data: New Sprites
 
 v0.41.2-dev (2015-02-12 15:20 UTC)
 + Bug [#4422]: Woods, jungle, and smoke not getting counted for LoS
