--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -1,5 +1,7 @@
 VERSION HISTORY:
 ----------------
+v0.41.4-dev (SVN)
+
 v0.41.3 (2014-04-18, 12:52 UTC+2)
 + Data: New Sprites
 + Bug: Air-to-ground fire needs to allow the attacker to pick a path on the
