--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -3,6 +3,7 @@ VERSION HISTORY:
 v0.41.4-dev (SVN)
 + Bug: UnitDisplay System Tab would double up on satus modifiers, like * and j
 + Bug [#4475]: BA body mounted missile launchers cannot be jettisoned
++ Patch [#477]: Bug fix for ECM drawing
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
 + Data: New Sprites
