--- a/trunk/megamek/i18n/megamek/common/report-messages.properties
+++ b/trunk/megamek/i18n/megamek/common/report-messages.properties
@@ -473,6 +473,8 @@
 4305=Breaking grapple of <data> (<data>)
 4310=, but the break grapple is impossible (<data>).
 4315=<data> (<data>) counterattacks!
+4316=<data> (<data>) moves and breaks the chain whip grapple with <data> (<data>)!
+4317=<data> (<data>) must roll to maintain chain whip grapple against <data> (<data>)
 4320=, no need to roll (<data>).
 4330=Defender protected by spikes! (-4 damage, attacker takes 2 damage)
 4331=Defender protected by spikes! (-4 damage)
