--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -9,6 +9,8 @@ v0.41.4-dev (SVN)
 + Feature: Grappled/Grappling units now have text drawn over the unit icon
 + Bug [#4486]: ASFs - Altitude changes do not take effect when flying off the
     map and returning
++ Bug [#4469]: Unable to deploy units on different building levels if there are
+    already 2 units present in the hex
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
 + Data: New Sprites
