--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -11,6 +11,7 @@ v0.41.4-dev (SVN)
     map and returning
 + Bug [#4469]: Unable to deploy units on different building levels if there are
     already 2 units present in the hex
++ Bug [#4522]: Exception in thread "Packet Pump" using r11761 (Grapple issue?)
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
 + Data: New Sprites
