--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -16,6 +16,7 @@ v0.41.4-dev (SVN)
 + Bug: Protomech BV - Speed Factor was rounded to 3 decimal places instead of 2
 + Bug [4523] BV Calculation Error for AP Gauss Ammo on ProtoMechs
 + Patch [#466]: Fov Grayscale option (grays out hexes without LoS)
++ Patch [#472]: Hex Slopes as addittion to shadows
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
 + Data: New Sprites
