--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -19,6 +19,8 @@ v0.41.4-dev (SVN)
 + Patch [#472]: Hex Slopes as addittion to shadows
 + Patch [#473]: Hex Base Textures bigger than 84x72
 + Bug [#4346]: ProtoMech Ammo Issues
++ Bug [#4450]: Conflict between vehicles on roads and weather/planetary
+    conditions
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
 + Data: New Sprites
