--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -22,6 +22,7 @@ v0.41.4-dev (SVN)
 + Bug [#4450]: Conflict between vehicles on roads and weather/planetary
     conditions
 + Bug: Reinforce from MUL fails with an exception if reinforcing small craft
++ Bug: Jump infantry dismounting from airborne VTOL don't get +1 mod for jumping
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
 + Data: New Sprites
