--- a/trunk/megamek/i18n/megamek/common/options/messages.properties
+++ b/trunk/megamek/i18n/megamek/common/options/messages.properties
@@ -342,6 +342,8 @@ GameOptionsInfo.option.tacops_attempting_stand.displayableName=TacOps Attempting
 GameOptionsInfo.option.tacops_attempting_stand.description=If checked,\na 'Mech has a harder time standing up if it has damaged or destroyed arms
 GameOptionsInfo.option.tacops_careful_stand.displayableName=TacOps Careful Stand
 GameOptionsInfo.option.tacops_careful_stand.description=If checked,\n'Mech can spend the entire movement phase trying to stand with a -2 psr mod.
+GameOptionsInfo.option.tacops_ziplines.displayableName=TacOps Zip Lines
+GameOptionsInfo.option.tacops_ziplines.description=If checked, Infantry without jump MP can unload from an airborne VTOL using zip lines(TO pg 219)
 GameOptionsInfo.option.no_immobile_vehicles.displayableName=(Unofficial) Vehicles not immobilized by crits
 GameOptionsInfo.option.no_immobile_vehicles.description=If checked,\nvehicles with a drive or engine hit will not be counted as 'immobile' for purposes of determining to-hit numbers.\nUnchecked by default.
 GameOptionsInfo.option.vehicles_can_eject.displayableName=(Unofficial) Vehicles can be abandoned
