--- a/trunk/megamek/i18n/megamek/common/report-messages.properties
+++ b/trunk/megamek/i18n/megamek/common/report-messages.properties
@@ -1022,3 +1022,8 @@
 9900=<font color='1CB0FF'>fires a second shot in ultra mode.</font>
 9905=<font color='C00000'>cannot fire a second shot because the weapon is jammed!</font>
 
+# Ziplines
+9920=<data> (<data>) must roll to successfully zip line, 
+9921=needs <data> [<data>], rolls <data>: 
+9922=<font color='008000'><B>succeeds</B></font>.
+9923=<font color='C00000'><B>fails</B></font>!
