--- a/trunk/megamek/i18n/megamek/client/messages.properties
+++ b/trunk/megamek/i18n/megamek/client/messages.properties
@@ -143,6 +143,7 @@ BoardView1.LOSTitle=Range / Line of Sight
 BoardView1.Mech=Mech
 BoardView1.minefield=minefield
 BoardView1.move=Move 
+BoardView1.TAKINGCOVER=COVER
 BoardView1.TurretLocked=Turret\ Locked
 BoardView1.WeaponsDestroyed=Weapons\ Destroyed
 BoardView1.Operational=Operational
@@ -168,6 +169,7 @@ BoardView1.STUNNED=STUNNED:{0}
 BoardView1.SWARMED=SWARMED
 BoardView1.Target=Target({0}) hex is {1}.\n
 BoardView1.TargetPartialCover=Target has {0} partial cover.\n
+BoardView1.TakingCover=Taking Cover
 BoardView1.Thunder-Inf=Inferno (
 BoardView1.TipLightWoods=Light Woods ({0})
 BoardView1.TipHeavyWoods=Heavy Woods ({0})
@@ -1297,6 +1299,7 @@ MovementDisplay.butVLand=V Land
 MovementDisplay.butVTakeOff=V Lift Off
 MovementDisplay.moveShakeOff=Shake Off
 MovementDisplay.MoveTakeOff=Lift Off
+MovementDisplay.moveTakeCover=Take Cover
 MovementDisplay.moveTurn=Turn
 MovementDisplay.MoveTurnLeft=Turn Left
 MovementDisplay.MoveTurnRight=Turn Right
