--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -16,7 +16,7 @@ v0.41.4-dev (SVN)
 + Bug: Protomech BV - Speed Factor was rounded to 3 decimal places instead of 2
 + Bug [4523] BV Calculation Error for AP Gauss Ammo on ProtoMechs
 + Patch [#466]: Fov Grayscale option (grays out hexes without LoS)
-+ Patch [#472]: Hex Slopes as addittion to shadows
++ Patch [#472]: Hex Slopes as addition to shadows
 + Patch [#473]: Hex Base Textures bigger than 84x72
 + Bug [#4346]: ProtoMech Ammo Issues
 + Bug [#4450]: Conflict between vehicles on roads and weather/planetary
@@ -30,6 +30,7 @@ v0.41.4-dev (SVN)
 + Bug [#4443]: Unable to deploy vehicles into heavy woods with roads
 + Bug [#4441]: Zooming out to scale<1 freezes the boardview
 + Bug [#4525]: help file not found
++ Data: New Sprites/XTRO Republic I Units.
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
 + Data: New Sprites
