--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -32,6 +32,7 @@ v0.41.4-dev (SVN)
 + Bug [#4525]: help file not found
 + Data: New Sprites/XTRO Republic I Units.
 + Bug [#4528]: Issues with visibility/detection in multi-team double blind
++ Bug: Minimap would still draw unit icons for sensor returns
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
 + Data: New Sprites
