--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -107,6 +107,7 @@ v0.41.4-dev (SVN)
     java.util.ConcurrentModificationException
 + Data: New Sprites.
 + Patch [#484]: Allow tab key to be bound to a command
++ Patch [#484]: Dashed lines for MovementEnvelope and HexSprite clean-up
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
