--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -111,6 +111,8 @@ v0.41.4-dev (SVN)
 + Bug: CursorSprites were being drawn off the board in the far upper left.
     Mostly, you could see a red highlighted hex when zoomed out
 + Bug: Empty tooltip displayed near board edge
++ Bug [#4546]: Loading infantry during deployment and changing sensors could
+    cause server to crash
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
