--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -114,6 +114,7 @@ v0.41.4-dev (SVN)
 + Bug [#4546]: Loading infantry during deployment and changing sensors could
     cause server to crash
 + Bug: Assault Drop button had missing i18n entry in DeploymentDisplay
++ Bug [#4548]: Infantry Field Guns should not have secondary target modifier
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
