--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -117,6 +117,7 @@ v0.41.4-dev (SVN)
 + Bug [#4548]: Infantry Field Guns should not have secondary target modifier
 + Bug: WiGEs could benefit from "road bonus" to MP
 + Bug: VTOLs and WiGEs would have StepSprites with "road bonus" indicator
++ Bug [#4544]: WiGEs that just took off couldn't drop down elevations properly
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
