--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -119,6 +119,7 @@ v0.41.4-dev (SVN)
 + Bug: VTOLs and WiGEs would have StepSprites with "road bonus" indicator
 + Bug [#4544]: WiGEs that just took off couldn't drop down elevations properly
 + Bug: Narc/iNarc bonuses not applied to compatible NLRM ammo.
++ Bug [#4544]: Airborne WiGE movement blocked by level 1 buildings
 
 
 v0.41.3 (2014-04-18, 12:52 UTC+2)
